Fixed letter spacing in footer

--- a/src/styles/homepage/index.scss
+++ b/src/styles/homepage/index.scss
@@ -59,6 +59,7 @@ main {
 }
 
 footer {
+	letter-spacing: 1.5px;
 	position: absolute;
 	bottom: 3%;
 	margin-top: 5%;
